force-app/main/default/objects/AccountContactRelation/fields/Is_Female__c.field-meta.xml
<CustomField>
    <fullName>Is_Female__c</fullName>
    <description>Field created for use in the &quot;Import Genetic Material&quot; Flow</description>
    <formula>TEXT(Contact.Sex_at_Birth__c) = &apos;Female&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Female?</label>
    <type>Checkbox</type>
</CustomField>