force-app/main/default/objects/AccountContactRelation/fields/Is_Male__c.field-meta.xml
<CustomField>
    <fullName>Is_Male__c</fullName>
    <description>Field created for use in the &quot;Import Genetic Material&quot; Flow</description>
    <formula>TEXT(Contact.Sex_at_Birth__c) = &apos;Male&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Male?</label>
    <type>Checkbox</type>
</CustomField>