force-app/main/default/objects/AccountContactRelation/fields/Patient_Record_Type_Field__c.field-meta.xml
<CustomField>
    <fullName>Patient_Record_Type_Field__c</fullName>
    <formula>Contact.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Record Type Field</label>
    <type>Text</type>
</CustomField>